Fixed buttons
Fixed buttons ish, still a small gap

--- a/client/src/creategame/scenario/scenario.css
+++ b/client/src/creategame/scenario/scenario.css
@@ -35,20 +35,20 @@
     padding: 10px;
     
   }
-  .button1{
+.button{
     border: none;
-    background-color: inherit;
-    padding: 5px 8px;
-    font-size: 16px;
-    cursor: pointer;
-    display: inline-block;
-}
-.button2{
-    border: none;
-    background-color: inherit;
-    padding: 5px 8px;
-    font-size: 16px;
-    cursor: pointer;
-    display: inline-block;
-
+    padding: 0;
+    background: none;
+    color: rgb(58, 167, 218);
+    width: 75px;
+    height: 40px;
+    text-align: center;
+  }
+.unstyled-button{
+  border: none;
+  padding: 0;
+  background: none;
+  width: 75px;
+  height: 40px;
+  text-align: center;
 }
